# devilspie

./: .cvsignore  ChangeLog  Makefile.am  NEWS  README  TODO  autogen.sh  configure.ac  configure.in  devilspie.1  devilspie.doap  devilspie.dtd  devilspie.glade  devilspie.gladep  devilspie.spec.in  docs2html.xsl  sample-config.xml
data/: Makefile.am  devilspie.desktop.in
debian/: README.Debian  TODO  changelog  control  copyright  devilspie.cat  devilspie.examples  devilspie.install  devilspie.sgmlcatalogs  postinst  prerm  rules
po/: .cvsignore  ChangeLog  LINGUAS  POTFILES.in  cs.po  da.po  de.po  es.po  fr.po  oc.po  pt_BR.po  sl.po  sv.po
src/: .cvsignore  Makefile.am  actions.c  actions.h  config-parser.c  config-parser.h  devilspie-action-debug.gob  devilspie-action-decorate.gob  devilspie-action-exec.gob  devilspie-action-hide.gob  devilspie-action-layer.gob  devilspie-action-opacity.gob  devilspie-action-resize.gob  devilspie-action-savegeometry.gob  devilspie-action-setgeometry.gob  devilspie-action-setwintype.gob  devilspie-action-setworkspace.gob  devilspie-action-shade.gob  devilspie-action.gob  devilspie-matcher-always.gob  devilspie-matcher-windowname.gob  devilspie-matcher.gob  devilspie.c  devilspie.h  doc-generator.c  e-sexp.c  e-sexp.h  flurb.c  flurb.h  logical.c  logical.h  matchers.c  matchers.h  parser-test.c  parser.c  parser.h  sexp-test.c  tristate-dummy.gob  xutils.c  xutils.h
tests/: contains-false.ds  contains-true.ds  is-false.ds  is-true.ds  matches-false.ds  matches-true.ds
