dnl Initial blurb
AC_PREREQ(2.52)
AC_INIT(devilspie, 0.2.4, http://www.burtonini.com/)
AC_CONFIG_SRCDIR(src/devilspie.c)
AM_INIT_AUTOMAKE(AC_PACKAGE_NAME, AC_PACKAGE_VERSION)
AM_CONFIG_HEADER(config.h)

# Honor aclocal flags
ACLOCAL="$ACLOCAL $ACLOCAL_FLAGS"

dnl Do the gettext/i18n stuff
GETTEXT_PACKAGE=devilspie
AC_DEFINE_UNQUOTED(GETTEXT_PACKAGE, "$GETTEXT_PACKAGE", [The name of the gettext package.])
AC_SUBST(GETTEXT_PACKAGE)

AM_MAINTAINER_MODE

AC_ISC_POSIX
AC_PROG_CC
AM_PROG_CC_STDC
AC_HEADER_STDC
GNOME_COMPILE_WARNINGS(yes)
AC_PROG_INTLTOOL([0.20])

dnl Check that we actually have the libraries required to
dnl build. Versioned dependancy on libwnck as essential API additions
dnl were made in 0.17.
PKG_CHECK_MODULES(EXTRA_GNOME,
        gtk+-2.0
        libwnck-1.0 >= 0.17
dnl        gconf-2.0
        libglade-2.0)
AC_SUBST(EXTRA_GNOME_CFLAGS)
AC_SUBST(EXTRA_GNOME_LIBS)

dnl Find how and where to put the GConf schemas
dnl AC_PATH_PROG(GCONFTOOL, gconftool-2, no)
dnl if test x"$GCONFTOOL" = xno; then
dnl        AC_MSG_ERROR([gconftool-2 executable not found in your path - should be installed with GConf])
dnl fi
dnl AM_GCONF_SOURCE_2

dnl We really need gob2 to build.
GOB2_CHECK(2.0.3)
dnl TODO: say something if GOB2 is not found

dnl Check for the POSIX regexpr functions and headers
AC_CHECK_FUNCS([regcomp regexec regfree])
AC_CHECK_HEADERS([sys/types.h regex.h])

ALL_LINGUAS="de"
AM_GLIB_GNU_GETTEXT

AC_OUTPUT([
devilspie.spec
Makefile
src/Makefile
po/Makefile.in
])
